--- a/projects.json
+++ b/projects.json
@@ -9,7 +9,7 @@
         "detailedDescription": "3D chess game with integration of katana created in the Samurai Swords Store app.",
         "screenshotsExtension": "jpg",
         "screenshots": [],
-      "video": "",
+      "video": true,
       "links": [
         { "name": "Website", "url": "https://samuraiwarlords.com/" }
     ]
@@ -24,7 +24,7 @@
         "detailedDescription": "Users can customize the configuration and order a katana based on their own designs.",
         "screenshotsExtension": "jpg",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": [
         { "name": "Website", "url": "https://samuraiswords.store/" },
         { "name": "Google Play", "url": "https://play.google.com/store/apps/details?id=com.cms.SamuraiSword" },
@@ -41,7 +41,7 @@
         "detailedDescription": "Welcome to the exciting world of Haunted Houses, our own crypto game! It’s a game where you should haunt ghosts in different locations. Haunted Houses is presented in a first-person shooter mode with adventure and RPG genre elements. The player controls his character using a touch gamepad (mobile) or keyboard and mouse (PC).\nYou can play in different locations and gradually move to more complex levels. The main goal is to hunt ghosts and to catch them more. Everyday you have an opportunity to get in the lucky ones ranking and earn by playing. In order to win you should outwit the competition, get smarter and faster. But just as much more interesting!\nWe’ve launched a game where players get into a competitive environment where they should be more agile and swift than rivals. It is this factor that contributes to an increase the interest and excitement of players, as well as increases session duration and helps to develop an in-game economy. Every day, a daily rating will be formed, which you can get into if you catch more ghosts than the rest, and pass the levels more successfully. Nobody can stop you because the results of the game will depend on you.Show everyone who’s the best ghost hunter around here!The \ngame with P2E mechanics and it’s based on the own $LUMIGHOST Token. It’s a prime example of our blockchain game development.\nNFT integration is planned in the nearest future.",
         "screenshotsExtension": "webp",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": [
         { "name": "Website", "url": "https://lumighost.com/product/haunted-houses/" }
     ]
@@ -57,7 +57,7 @@
         "detailedDescription": "Developed dynamic (in runtime) loading .gltf models, using API for dynamic loading posters and tickets.",
         "screenshotsExtension": "jpg",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": []
     },
     {
@@ -70,7 +70,7 @@
         "detailedDescription": "Developed SDK for Unity for RudderStack analytics.",
         "screenshotsExtension": "webp",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": [
         { "name": "Website", "url": "https://www.rudderstack.com/" }
       ]
@@ -85,7 +85,7 @@
         "detailedDescription": "Gnaw tree, build your dam and block the river.",
         "screenshotsExtension": "jpg",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": []
     },
 
@@ -99,7 +99,7 @@
       "detailedDescription": "Developed the Beaver Lumberjack game, where players block rivers by building dams.",
       "screenshotsExtension": "jpg",
       "screenshots": [],
-      "video": "",
+      "video": false,
       "links": []
     },
     {
@@ -112,7 +112,7 @@
         "detailedDescription": "Developed autochess game with over 50 characters, including in-app purchases.",
         "screenshotsExtension": "jpg",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": []
     },
     {
@@ -125,7 +125,7 @@
         "detailedDescription": "Gnaw tree, build your dam and block the river.",
         "screenshotsExtension": "webp",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": []
     },
 
@@ -139,7 +139,7 @@
       "detailedDescription": "Gnaw tree, build your dam and block the river.",
       "screenshotsExtension": "jpg",
       "screenshots": [],
-      "video": "",
+      "video": false,
       "links": []
     },
     {
@@ -165,7 +165,7 @@
       "detailedDescription": "Gnaw tree, build your dam and block the river.",
       "screenshotsExtension": "jpg",
       "screenshots": [],
-      "video": "",
+      "video": false,
       "links": []
     },
 
@@ -179,7 +179,7 @@
       "detailedDescription": "Gnaw tree, build your dam and block the river.",
       "screenshotsExtension": "jpg",
       "screenshots": [],
-      "video": "",
+      "video": false,
       "links": [
         { "name": "Website", "url": "https://www.klee.games/" }
       ]
@@ -194,7 +194,7 @@
       "detailedDescription": "Gnaw tree, build your dam and block the river.",
       "screenshotsExtension": "webp",
       "screenshots": [],
-      "video": "",
+      "video": false,
       "links": [
         { "name": "App Store", "url": "https://apps.apple.com/us/app/magic-swamp/id6443608622" }
     ]
@@ -209,7 +209,7 @@
         "detailedDescription": "Gnaw tree, build your dam and block the river.",
         "screenshotsExtension": "webp",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": [
         { "name": "App Store", "url": "https://apps.apple.com/us/app/shio-hashtag-queens-superhero/id6445946482" },
         { "name": "Google Play", "url": "https://play.google.com/store/apps/details?id=com.robodrone.shio.hashtag.queen.superhero.runner" }
@@ -227,7 +227,7 @@
         "detailedDescription": "Gnaw tree, build your dam and block the river.",
         "screenshotsExtension": "jpg",
         "screenshots": [],
-      "video": "",
+      "video": false,
       "links": []
     }
   ]
